@@ -1,3 +1,7 @@
+2015-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* sample/GLFW/heightmap.rb : Added.
+
 2015-10-16  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* sample/GLFW/boing.rb, sample/util/rmath3d_plain.rb : Added.
